# parallel-prolog-interpreter

./: .gitignore  README.md  contrived.pl  dune-project  nqueens.pl  nqueensgen.pl  output.txt  perm.txt  prolog_interpreter.opam  sequential_interpreter.opam  simple.pl  swi_nqueensgen.pl  test.txt  timings.txt 2.txt
lib/: ast.ml  common.ml  dune  evaluator.ml  exp.ml  interface.ml  lexer.mll  main.ml  parser.mly  stack_evaluator.ml  worker.ml  worker.mli
parallel/: dune  include.ml  start_app.ml  trail_worker.ml  worker.ml
rpc_parallel/: dune  how_to_run.ml  parallel.ml  parallel_intf.ml
sequential/: ast.ml  common.ml  dune  evaluator.ml  interface.ml  lexer.mll  main.ml  mutable_evaluator.ml  parser.mly  stack_evaluator.ml  trail_evaluator.ml  trail_stack_evaluator.ml  trail_util.ml  util.ml  worker.ml
test/: all_tests.ml  common_test.ml  dune  evaluator_test.ml  lexer_test.ml  parallel_test.py  parser_test.ml  stack_evaluator_test.ml  trail_evaluator_test.ml  trail_parallel_test.py  trail_util_test.ml  util_test.ml
timings/: extract_stack_height.py  extract_stack_times.py  extract_times.py  fib25.csv  nqueens.csv  nqueenscut.csv  output.txt  output2.txt  results.csv  stackheight.csv  sudokuperm.csv
trail_parallel/: backend.mli  dune  include.ml  start_app.ml  start_app.mli  trail_util.ml  trail_worker.ml  trail_worker.mli
trail_sequential/: dune  include.ml  main.ml  trail_evaluator.ml  trail_stack_evaluator.ml  trail_util.ml
